--- a/matter.tex
+++ b/matter.tex
@@ -356,8 +356,8 @@ toc=false,%
     {\oldchapter#1{#2}}
 }
 
-\renewcommand{\listingscaption}{Código}
-\renewcommand{\listoflistingscaption}{Lista de Excertos de Código}
+\renewcommand{\listingscaption}{Code}
+\renewcommand{\listoflistingscaption}{List of Code Excerpts}
 \cleardoublepage
 {\small\listoflistings}
 \addcontentsline{toc}{chapter}{\listoflistingscaption}
@@ -407,7 +407,7 @@ toc=false,%
 \renewcommand{\bibfont}{\footnotesize}
 % Redefine References name to Portuguese
 % Change if you are using english
-\defbibheading{bibliography}[Referências]{
+\defbibheading{bibliography}[References]{
 	\chapter{#1}
 }
 \SingleSpacing
