pontos do sumário

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -374,6 +374,14 @@ A query builder refers to constructing a query according to the user preferences
 It is important to note that there aren't many cases of query builder documentation.
 
 
-\section{Insights/Summary}
+\section{Summary}
 
-Em forma de sumário
+* a junção das áreas NLP com IR parece bastante promissora
+* apesar de poucas informação sobre query builders, é possivel reunir e estruturar conceitos-chave para o seu desenvolvimento
+* A área de NLP e llm está em constante atualização atualmente
+* 
+
+
+>> falar sobre desafios? 
+
+* fine-tune do modelo llm mediante a estrutura da query será um desafio
