latex errors fixed

--- a/cover.tex
+++ b/cover.tex
@@ -96,18 +96,18 @@
 
 %%% Edit author's name
 %% Author's full name
-\Author{JOÃO ANTÓNIO\\ASSIS REIS}
+\Author{FIRST NAME\\LAST NAME}
 
 %%% Edit thesis title in Portuguese
 %% Thesis Mandatory Title in Portuguese
-\TitlePT{UM CONSTRUTOR DE PESQUISA CONVERSACIONAL EM BASE DE DADOS CLÍNICAS MÉDICAS}
+\TitlePT{TÍTULO DA TESE (MÁXIMO 70 CARACTERES)}
 
 %%% OPTIONAL: you can write your thesis title in
 %%%  other languages. You can repeat the following
 %%%  line as many times as you want, or remove it
 %%%  if you only want the portuguese title.
 %% Optional Titles in additional languages.
-\TitleEN{A CONVERSATIONAL QUERY BUILDER ON MEDICAL CLINICAL DATABASES}
+\TitleEN{THESIS TITLE (MAX 70 CHARACTERS)}
 
 %%% OPTIONAL: add a quotation if you like.
 %% Optional Quotation
@@ -116,26 +116,34 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 
 %%% Edit your supervisor's information.
 %%%
+%%% Use this command for male supervisor
 %%% \Supervisor{name}{category}
+%%%
+%%% Or this command for femmale supervisor
+%%% \Supervisora{name}{category}
 %%%
 %%% name   : Supervisor's name
 %%% categoy: One of the following list
 %%%
-%%% | category               |
-%%% --------------------------
-%%% | catedrático            |
-%%% | catedrático convidado  |
-%%% | associado c/ agregação |
-%%% | associado              |
-%%% | auxiliar               |
-%%% | auxiliar convidado     |
-%%% --------------------------
+%%% | category                  |
+%%% -----------------------------
+%%% | catedrático/a             |
+%%% | catedrático/a convidado/a |
+%%% | associado/a c/ agregação  |
+%%% | associado/a               |
+%%% | auxiliar                  |
+%%% | auxiliar convidado        |
+%%% -----------------------------
 %% Supervisor information
-\Supervisor{João Rafael Almeida}{associado}
+\Supervisor{(nome do orientador)}{associado}
 
 %%% OPTIONAL: you can add a second supervisor.
 %%%
+%%% Use this command for male supervisor
 %%% \SecondSupervisor{name}{category}
+%%% 
+%%% Or this command for femmale supervisor
+%%% \SecondSupervisora{name}{category}
 %%%  {[preposition: (at, in, no, da)] department}
 %%%  {[preposition: (at, in, do, na)] school}
 %%%
@@ -147,7 +155,7 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% school    : University/Scholl name; Choose the
 %%%             preposition accordingly.
 %% Optional SecondSuperviser information
-\SecondSupervisor{José Luís Oliveira (co-orientador)}{catedrático}{do Departamento de Electrónica, Telecomunicações e Informática}{da Universidade de Aveiro}
+\SecondSupervisor{(co-orientador)}{auxiliar convidado}{do Departamento de Matemática}{da Universidade de Aveiro}
 
 %%% Edit your degree information.
 %%%
@@ -156,15 +164,15 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% title: Degree title (Mestre or Doutor)
 %%% name : Degree name
 %% Degree title and name
-\Degree{Mestre}{Engenharia Informática}
+\Degree{Mestre}{Engenharia de Computadores e Telemática}
 
 %%% OPTIONAL: edit grant support texts where
 %%%  appropriate. Maximum two.
 %%%
 %%% \GrantText{grant1}{grant2}
 %% Optional Grant support texts
-%%  \GrantText{Texto Apoio financeiro do POCTI no âmbito do III Quadro Comunitário de Apoio.}
-%%           {Texto Apoio financeiro da FCT e do FSE no âmbito do III Quadro Comunitário de Apoio.}
+\GrantText{Texto Apoio financeiro do POCTI no âmbito do III Quadro Comunitário de Apoio.}
+          {Texto Apoio financeiro da FCT e do FSE no âmbito do III Quadro Comunitário de Apoio.}
 
 %%% OPTIONAL: Add a dedication text.
 %% Optional Dedication text
@@ -194,13 +202,16 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 
 %%% Edit the Jury President information.
 %% First Member will be the President of the Jury
-% \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
 %%% Repeat the above declaration for additional
 %%%  members of the jury as many times as necessary.
 %% Additional members of the Jury
-
-%% add the other members of the jury later here
+\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
+\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
