interactive query builder section

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -297,3 +297,19 @@
 	year = {2023},
 	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
 }
+
+
+
+@article{kamnis_generative_2023,
+	title = {Generative pre-trained transformers ({GPT}) for surface engineering},
+	volume = {466},
+	issn = {0257-8972},
+	doi = {10.1016/j.surfcoat.2023.129680},
+	urldate = {2024-01-09},
+	journal = {Surface and Coatings Technology},
+	author = {Kamnis, Spyros},
+	month = aug,
+	year = {2023},
+	keywords = {Generative AI, GPT, Large language model, LLM, NLP, Thermal spray},
+	pages = {129680},
+}
