--- a/matter.tex
+++ b/matter.tex
@@ -86,7 +86,7 @@
 {\usepackage{minted}}%
 
 \addto\captionsportuguese{%
-  \renewcommand\listingscaption{Código}
+  \renewcommand\listingscaption{Code}
 }
 \fvset{fontsize=\footnotesize} % Make Code blocks smaller than text
 \usepackage{csquotes}
@@ -262,7 +262,7 @@ toc=false,%
 %\includepdf[pages=-]{cover.pdf}
 
 % Uncomment to enable English
-%\selectlanguage{english}
+\selectlanguage{english}
 
 
 % Front matter
@@ -356,8 +356,8 @@ toc=false,%
     {\oldchapter#1{#2}}
 }
 
-\renewcommand{\listingscaption}{Código}
-\renewcommand{\listoflistingscaption}{Lista de Excertos de Código}
+\renewcommand{\listingscaption}{Code}
+%\renewcommand{\listoflistingscaption}{List of Code Excerpts}
 \cleardoublepage
 {\small\listoflistings}
 \addcontentsline{toc}{chapter}{\listoflistingscaption}
@@ -412,7 +412,7 @@ toc=false,%
 \renewcommand{\bibfont}{\footnotesize}
 % Redefine References name to Portuguese
 % Change if you are using english
-\defbibheading{bibliography}[Referências]{
+\defbibheading{bibliography}[References]{
 	\chapter{#1}
 }
 \SingleSpacing
