--- a/bib/references.bib
+++ b/bib/references.bib
@@ -313,3 +313,18 @@
 	keywords = {Generative AI, GPT, Large language model, LLM, NLP, Thermal spray},
 	pages = {129680},
 }
+
+
+
+@book{informatics_chapter_nodate,
+	title = {Chapter 10 {Defining} {Cohorts} {\textbar} {The} {Book} of {OHDSI}},
+	url = {https://ohdsi.github.io/TheBookOfOhdsi/},
+	urldate = {2024-01-03},
+	author = {OHDSI},
+}
+
+@misc{noauthor_jquery_nodate,
+	title = {{jQuery} {QueryBuilder}},
+	url = {https://querybuilder.js.org/},
+	urldate = {2024-01-4},
+}
