falta melhorar uma secção

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -114,6 +114,12 @@
 \newcommand{\plm}{\gls{plm}}
 
 \newabbreviation
+    {rnn}
+    {RNN}
+    {Recurrent Neural Networks}
+\newcommand{\rnn}{\gls{rnn}}
+
+\newabbreviation
     {bert}
     {BERT}
     {Bidirectional Encoder Representations from Transformers}
