--- a/bib/references.bib
+++ b/bib/references.bib
@@ -89,7 +89,7 @@
 @incollection{p_m_efficient_2021,
 	title = {An {Efficient} {Text}-{Based} {Image} {Retrieval} {Using} {Natural} {Language} {Processing} ({NLP}) {Techniques}},
 	isbn = {9789811553998},
-	author = {P M, Ashok Kumar and Rao, T. and Lakshminarayanan, Arun Raj and Pugazhendi, E.},
+	author = {Kumar and Rao, T. and Lakshminarayanan, Arun Raj and Pugazhendi, E.},
 	month = jan,
 	year = {2021},
 	doi = {10.1007/978-981-15-5400-1_52},
@@ -327,4 +327,49 @@
 	title = {{jQuery} {QueryBuilder}},
 	url = {https://querybuilder.js.org/},
 	urldate = {2024-01-4},
+}
+
+
+@article{mitra_introduction_nodate,
+	title = {An {Introduction} to {Neural} {Information} {Retrieval}},
+	language = {en},
+	author = {Mitra, Bhaskar and Craswell, Nick},
+}
+
+
+@misc{noauthor_practical_2018,
+	title = {Practical {BM25} - {Part} 2: {The} {BM25} {Algorithm} and its {Variables}},
+	url = {https://www.elastic.co/blog/practical-bm25-part-2-the-bm25-algorithm-and-its-variables},
+	language = {en-us},
+	journal = {Elastic Blog},
+	month = apr,
+	year = {2018},
+}
+
+
+@misc{chang_language_2023,
+	title = {Language {Model} {Behavior}: {A} {Comprehensive} {Survey}},
+	shorttitle = {Language {Model} {Behavior}},
+	publisher = {arXiv},
+	author = {Chang, Tyler A. and Bergen, Benjamin K.},
+	month = aug,
+	year = {2023},
+	keywords = {Computer Science - Computation and Language},
+}
+
+
+@misc{yao_react_2023,
+	title = {{ReAct}: {Synergizing} {Reasoning} and {Acting} in {Language} {Models}},
+	doi = {10.48550/arXiv.2210.03629},
+	author = {Yao, Shunyu and Zhao, Jeffrey and Yu, Dian and Du, Nan and Shafran, Izhak and Narasimhan, Karthik and Cao, Yuan},
+	month = mar,
+	year = {2023},
+}
+
+@misc{wei_chain--thought_2023,
+	title = {Chain-of-{Thought} {Prompting} {Elicits} {Reasoning} in {Large} {Language} {Models}},
+	doi = {10.48550/arXiv.2201.11903},
+	author = {Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Ichter, Brian and Xia, Fei and Chi, Ed and Le, Quoc and Zhou, Denny},
+	month = jan,
+	year = {2023},
 }
