ready for review

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -142,3 +142,10 @@
     {RAG}
     {Retrieval-Augmented Generation}
 \newcommand{\rag}{\gls{rag}}
+
+\newabbreviation
+    {rlhf}
+    {RLHF}
+    {Reinforcement Learning from Human Feedback}
+\newcommand{\rlhf}{\gls{rlhf}}
+
