--- a/bib/references.bib
+++ b/bib/references.bib
@@ -10,21 +10,6 @@
 	pages = {54--61},
 }
 
-@article{borah_survey_2019,
-	title = {Survey of {Textbased} {Chatbot} in {Perspective} of {Recent} {Technologies}},
-	volume = {1031},
-	issn = {1865-0929},
-	doi = {10.1007/978-981-13-8581-0_7},
-	language = {English},
-	journal = {Communications in Computer and Information Science},
-	author = {Borah, B. and Pathak, D. and Sarmah, P. and Som, B. and Nandi, S.},
-	year = {2019},
-	note = {ISBN: 9789811385803},
-	keywords = {Artificial intelligence, Chatbot framework, Intelligent chatbot, Machine learning, Natural language processing},
-	pages = {84--96},
-	annote = {Cited By :13},
-}
-
 
 @inproceedings{chizhik_challenges_2020,
 	title = {Challenges of {Building} an {Intelligent} {Chatbot}},
@@ -63,28 +48,6 @@
 	keywords = {Case analysis, Chatbot, Conversational agent, Knowledge-based system, System design},
 	pages = {101098},
 }
-
-@misc{dilmegani_cem_how_nodate,
-	title = {How to {Build} a {Chatbot}: {Components} \& {Architecture} in 2023},
-	shorttitle = {How to {Build} a {Chatbot}},
-	language = {en-US},
-	urldate = {2023-11-13},
-	author = {Dilmegani Cem},
-}
-
-@article{pereira_querying_2023,
-	title = {Querying semantic catalogues of biomedical databases},
-	volume = {137},
-	issn = {1532-0464},
-	doi = {10.1016/j.jbi.2022.104272},
-	language = {English},
-	journal = {Journal of Biomedical Informatics},
-	author = {Pereira, A. and Almeida, J.R. and Lopes, R.P. and Oliveira, J.L.},
-	year = {2023},
-	keywords = {Biomedical data, Information extraction, Knowledge bases, Linked data, Natural language interfaces, Question answering, Semantic data},
-	annote = {Cited By :2},
-}
-
 
 @incollection{p_m_efficient_2021,
 	title = {An {Efficient} {Text}-{Based} {Image} {Retrieval} {Using} {Natural} {Language} {Processing} ({NLP}) {Techniques}},
@@ -326,13 +289,12 @@
 @misc{noauthor_jquery_nodate,
 	title = {{jQuery} {QueryBuilder}},
 	url = {https://querybuilder.js.org/},
-	urldate = {2024-01-4},
+	urldate = {2024-01-04},
 }
 
 
 @article{mitra_introduction_nodate,
 	title = {An {Introduction} to {Neural} {Information} {Retrieval}},
-	language = {en},
 	author = {Mitra, Bhaskar and Craswell, Nick},
 }
 
@@ -340,7 +302,7 @@
 @misc{noauthor_practical_2018,
 	title = {Practical {BM25} - {Part} 2: {The} {BM25} {Algorithm} and its {Variables}},
 	url = {https://www.elastic.co/blog/practical-bm25-part-2-the-bm25-algorithm-and-its-variables},
-	language = {en-us},
+	author = {Connelly, Shane},
 	journal = {Elastic Blog},
 	month = apr,
 	year = {2018},
@@ -372,4 +334,163 @@
 	author = {Wei, Jason and Wang, Xuezhi and Schuurmans, Dale and Bosma, Maarten and Ichter, Brian and Xia, Fei and Chi, Ed and Le, Quoc and Zhou, Denny},
 	month = jan,
 	year = {2023},
+}
+
+
+@misc{hu_lora_2021,
+	title = {{LoRA}: {Low}-{Rank} {Adaptation} of {Large} {Language} {Models}},
+	doi = {10.48550/arXiv.2106.09685},
+	author = {Hu, Edward J. and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
+	month = oct,
+	year = {2021},
+}
+
+
+@article{misischia_chatbots_2022,
+	title = {Chatbots in customer service: {Their} relevance and impact on service quality},
+	volume = {201},
+	issn = {1877-0509},
+	doi = {10.1016/j.procs.2022.03.055},
+	urldate = {2024-12-15},
+	author = {Misischia, Chiara Valentina and Poecze, Flora and Strauss, Christine},
+	month = jan,
+	year = {2022},
+}
+
+
+@article{agarwal_review_2020,
+	title = {Review of {State}-of-the-{Art} {Design} {Techniques} for {Chatbots}},
+	issn = {2662-995X},
+	doi = {10.1007/s42979-020-00255-3},
+	author = {Agarwal, R. and Wadhwa, M.},
+	year = {2020},
+}
+
+
+
+@article{li_human-centered_2019,
+	title = {Human-{Centered} {Reinforcement} {Learning}: {A} {Survey}},
+	issn = {2168-2305},
+	doi = {10.1109/THMS.2019.2912447},
+	number = {4},
+	urldate = {2024-01-17},
+	journal = {IEEE Transactions on Human-Machine Systems},
+	author = {Li, Guangliang and Gomez, Randy and Nakamura, Keisuke and He, Bo},
+	month = aug,
+	year = {2019},
+}
+
+@article{tran_enhancing_2023,
+	title = {Enhancing {Conversational} {Model} {With} {Deep} {Reinforcement} {Learning} and {Adversarial} {Learning}},
+	issn = {2169-3536},
+	doi = {10.1109/ACCESS.2023.3297652},
+	journal = {IEEE Access},
+	author = {Tran, Q.-D.L. and Le, A.-C. and Huynh, V.-N.},
+	year = {2023},
+}
+
+@article{axelsson_modeling_2022,
+	title = {Modeling {Feedback} in {Interaction} {With} {Conversational} {Agents}—{A} {Review}},
+	issn = {2624-9898},
+	doi = {10.3389/fcomp.2022.744574},
+	journal = {Frontiers in Computer Science},
+	author = {Axelsson, A. and Buschmeier, H. and Skantze, G.},
+	year = {2022},
+}
+
+
+@article{peng_survey_2019,
+	title = {A survey on construction and enhancement methods in service chatbots design},
+	issn = {2524-521X},
+	doi = {10.1007/s42486-019-00012-3},
+	journal = {CCF Transactions on Pervasive Computing and Interaction},
+	author = {Peng, Z. and Ma, X.},
+	year = {2019},
+}
+
+
+
+@misc{devlin_bert_2018,
+	title = {{BERT}: {Pre}-training of {Deep} {Bidirectional} {Transformers} for {Language} {Understanding}},
+	journal = {arXiv.org},
+	author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	month = oct,
+	year = {2018},
+}
+
+
+
+@article{weizenbaum_elizacomputer_1966,
+	title = {{ELIZA}—a computer program for the study of natural language communication between man and machine},
+	doi = {10.1145/365153.365168},
+	journal = {Communications of the ACM},
+	author = {Weizenbaum, Joseph},
+	month = jan,
+	year = {1966},
+}
+
+
+@article{lan_research_2022,
+	title = {Research on {Text} {Similarity} {Measurement} {Hybrid} {Algorithm} with {Term} {Semantic} {Information} and {TF}-{IDF} {Method}},
+	volume = {2022},
+	issn = {1687-5680},
+	doi = {10.1155/2022/7923262},
+	journal = {Advances in Multimedia},
+	author = {Lan, F.},
+	year = {2022},
+}
+
+
+@article{chen_integrating_2023,
+	title = {Integrating {Representation} and {Interaction} for {Context}-{Aware} {Document} {Ranking}},
+	doi = {10.1145/3529955},
+	journal = {ACM Transactions on Information Systems},
+	author = {Chen, H. and Dou, Z. and Zhu, Q. and Zuo, X. and Wen, J.-R.},
+	year = {2023},
+}
+
+
+@misc{min_recent_pretrained,
+	title = {Recent {Advances} in {Natural} {Language} {Processing} via {Large} {Pre}-trained {Language} {Models}: {A} {Survey} {\textbar} {ACM} {Computing} {Surveys}},
+	author = {Min, Bonan and Ross, Hayley and Sulem, Elior and Veyseh, Amir and Nguyen, Thien and Sainz, Oscar and Agirre, Eneko and Heintz, Ilana and Roth, Dan}
+}
+
+
+@article{church_emerging_2023,
+	title = {Emerging trends: {Smooth}-talking machines},
+	volume = {29},
+	issn = {1351-3249},
+	doi = {10.1017/S1351324923000463},
+	journal = {Natural Language Engineering},
+	author = {Church, K.W. and Yue, R.},
+	year = {2023},
+}
+
+
+@article{kshetri_cybercrime_2023,
+	title = {Cybercrime and {Privacy} {Threats} of {Large} {Language} {Models}},
+	volume = {25},
+	issn = {1520-9202},
+	doi = {10.1109/MITP.2023.3275489},
+	journal = {IT Professional},
+	author = {Kshetri, N.},
+	year = {2023},
+}
+
+
+
+@misc{noauthor_introducing_2021,
+	title = {Introducing {Query} {Builder}: write complex queries without code},
+	url = {https://www.dronahq.com/introducing-query-builder/},
+	urldate = {2024-01-05},
+	journal = {DronaHQ},
+	month = aug,
+	year = {2021},
+}
+
+
+@inproceedings{mussa_forestqb_2022,
+	title = {{ForestQB}: {An} {Adaptive} {Query} {Builder} to {Support} {Wildlife} {Research}},
+	author = {Mussa, O. and Rana, O. and Goossens, B. and Orozco-TerWengel, P. and Perera, C.},
+	year = {2022},
 }
