--- a/cover.tex
+++ b/cover.tex
@@ -96,18 +96,18 @@
 
 %%% Edit author's name
 %% Author's full name
-\Author{FIRST NAME\\LAST NAME}
+\Author{JOÃO ANTÓNIO \\ASSIS REIS}
 
 %%% Edit thesis title in Portuguese
 %% Thesis Mandatory Title in Portuguese
-\TitlePT{TÍTULO DA TESE (MÁXIMO 70 CARACTERES)}
+\TitlePT{UM CONSTRUTOR DE PESQUISA CONVERSACIONAL EM BASE DE DADOS CLÍNICAS MÉDICAS}
 
 %%% OPTIONAL: you can write your thesis title in
 %%%  other languages. You can repeat the following
 %%%  line as many times as you want, or remove it
 %%%  if you only want the portuguese title.
 %% Optional Titles in additional languages.
-\TitleEN{THESIS TITLE (MAX 70 CHARACTERS)}
+\TitleEN{A CONVERSATIONAL QUERY BUILDER ON MEDICAL CLINICAL DATABASES}
 
 %%% OPTIONAL: add a quotation if you like.
 %% Optional Quotation
@@ -135,7 +135,7 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% | auxiliar convidado        |
 %%% -----------------------------
 %% Supervisor information
-\Supervisor{(nome do orientador)}{associado}
+\Supervisor{José Luís Oliveira}{catedrático}
 
 %%% OPTIONAL: you can add a second supervisor.
 %%%
@@ -155,7 +155,7 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% school    : University/Scholl name; Choose the
 %%%             preposition accordingly.
 %% Optional SecondSuperviser information
-\SecondSupervisor{(co-orientador)}{auxiliar convidado}{do Departamento de Matemática}{da Universidade de Aveiro}
+\SecondSupervisor{João Rafael Almeida}{associado}{do Departamento de Electrónica, Telecomunicações e Informática}{da Universidade de Aveiro}
 
 %%% Edit your degree information.
 %%%
@@ -164,23 +164,27 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% title: Degree title (Mestre or Doutor)
 %%% name : Degree name
 %% Degree title and name
-\Degree{Mestre}{Engenharia de Computadores e Telemática}
+\Degree{Mestre}{Engenharia Informática}
 
 %%% OPTIONAL: edit grant support texts where
 %%%  appropriate. Maximum two.
 %%%
 %%% \GrantText{grant1}{grant2}
 %% Optional Grant support texts
-\GrantText{Texto Apoio financeiro do POCTI no âmbito do III Quadro Comunitário de Apoio.}
-          {Texto Apoio financeiro da FCT e do FSE no âmbito do III Quadro Comunitário de Apoio.}
+% \GrantText{Texto Apoio financeiro do POCTI no âmbito do III Quadro Comunitário de Apoio.}
+%           {Texto Apoio financeiro da FCT e do FSE no âmbito do III Quadro Comunitário de Apoio.}
 
 %%% OPTIONAL: Add a dedication text.
 %% Optional Dedication text
-\Dedication{Dedico este trabalho à minha esposa e filho pelo incansável apoio.}
+% \Dedication{Dedico este trabalho à minha esposa e filho pelo incansável apoio.}
 
 %%% OPTIONAL: Add an acknowledgement text
 %% Optional Acknowledgement text
-\Acknowledgements{Agradeço toda a ajuda a todos os meus colegas e companheiros.}
+\Acknowledgements{Agradeço toda a ajuda a todos os meus orientadores, amigos e família.}
+
+
+\iffalse   %% commented
+
 
 %%% Edit the keywords and abstract in Portuguese
 %%% Don't forget to remove the \blindtext[3]
@@ -213,6 +217,8 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
+
+\fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%       DEFINE THESIS COVER FIELDS
