--- a/matter.tex
+++ b/matter.tex
@@ -109,6 +109,14 @@
 
 % Add support for Colors
 \usepackage{xcolor}
+\hypersetup
+{
+   colorlinks,
+   linkcolor={red!50!black},
+   citecolor={green!50!black},
+   urlcolor={blue!80!black}
+}
+
 
 % Add support for the Euro symbol
 \usepackage{eurosym}
@@ -217,6 +225,9 @@ shortcuts=abbreviations,%
 toc=false,%
 ]{glossaries-extra}
 
+\glssetwidest{123456789012345}
+\setlength{\glslistdottedwidth}{.28\textwidth}
+
 % Include defined abbreviations
 \input{abbreviations.tex}
 
@@ -261,7 +272,7 @@ toc=false,%
 \pagenumbering{Alph}
 
 \ifthenelse{\equal{\useoverleaf}{0}}{}{\makecoverfile{}}%
-%\includepdf[pages=-]{cover.pdf}
+\includepdf[pages=-]{cover.pdf}
 
 % Uncomment to enable English
 \selectlanguage{english}
@@ -367,7 +378,7 @@ toc=false,%
 % Print glossaries-extra
 \renewcommand{\glossaryname}{Glossary}
 \cleardoublepage
-{\printunsrtglossaries}
+{\small\printunsrtglossaries}
 \addcontentsline{toc}{chapter}{\glossaryname}
 
 % Reset Chapters
