--- a/matter.tex
+++ b/matter.tex
@@ -408,7 +408,7 @@ toc=false,%
 % Uncomment to add further chapters
 \include{chapters/chapter1}
 \include{chapters/chapter2}
-\include{chapters/chapter3}
+\include{chapters/tmp}
 %\include{chapter4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
