--- a/cover.tex
+++ b/cover.tex
@@ -81,8 +81,8 @@
 
 %%% Uncomment one of the following options:
 %\DocumentTypeThesis
-\DocumentTypeThesisProposal
-%\DocumentTypeDissertation
+%\DocumentTypeThesisProposal
+\DocumentTypeDissertation
 
 %%% Uncomment if you are a student of a MAP Doctoral program 
 %%% http://www.map.edu.pt/
@@ -100,14 +100,14 @@
 
 %%% Edit thesis title in Portuguese
 %% Thesis Mandatory Title in Portuguese
-\TitlePT{UM CONSTRUTOR DE PESQUISA CONVERSACIONAL EM BASE DE DADOS CLÍNICAS MÉDICAS}
+\TitlePT{UM SISTEMA CONVERSACIONAL DE PESQUISA SOBRE BASE DE DADOS MÉDICAS}
 
 %%% OPTIONAL: you can write your thesis title in
 %%%  other languages. You can repeat the following
 %%%  line as many times as you want, or remove it
 %%%  if you only want the portuguese title.
 %% Optional Titles in additional languages.
-\TitleEN{A CONVERSATIONAL QUERY BUILDER ON MEDICAL CLINICAL DATABASES}
+\TitleEN{A CONVERSATIONAL QUERY BUILDER ON MEDICAL DATABASES}
 
 %%% OPTIONAL: add a quotation if you like.
 %% Optional Quotation
@@ -135,7 +135,6 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% | auxiliar convidado        |
 %%% -----------------------------
 %% Supervisor information
-\Supervisor{José Luís Oliveira}{catedrático}
 
 %%% OPTIONAL: you can add a second supervisor.
 %%%
@@ -155,7 +154,9 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%% school    : University/Scholl name; Choose the
 %%%             preposition accordingly.
 %% Optional SecondSuperviser information
-\SecondSupervisor{João Rafael Almeida}{associado}{do Departamento de Electrónica, Telecomunicações e Informática}{da Universidade de Aveiro}
+\Supervisor{João Rafael Almeida}{auxiliar}
+
+\SecondSupervisor{José Luís Oliveira}{catedrático}{do Departamento de Electrónica, Telecomunicações e Informática}{da Universidade de Aveiro}
 
 %%% Edit your degree information.
 %%%
@@ -182,8 +183,7 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %% Optional Acknowledgement text
 \Acknowledgements{Agradeço toda a ajuda a todos os meus orientadores, amigos e família.}
 
-
-\iffalse   %% commented
+%% commented
 
 
 %%% Edit the keywords and abstract in Portuguese
@@ -218,7 +218,6 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
 
-\fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%       DEFINE THESIS COVER FIELDS
