chapter 3 almost done

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -494,3 +494,12 @@
 	author = {Mussa, O. and Rana, O. and Goossens, B. and Orozco-TerWengel, P. and Perera, C.},
 	year = {2022},
 }
+
+
+@inproceedings{reis2024flowise,
+  title="{Using Flowise to Streamline Biomedical Data Discovery and Analysis}",
+  author={Reis, Jo{~a}o Ant{'o}nio and Almeida, Jo{~a}o Rafael and Almeida, Tiago Melo and Oliveira, Jos{'e} Lu{'\i}s},
+  booktitle={2024 IEEE 22nd Mediterranean Electrotechnical Conference (MELECON)},
+  year={2024},
+  organization={IEEE}
+}
