--- a/matter.tex
+++ b/matter.tex
@@ -408,8 +408,10 @@ toc=false,%
 % Uncomment to add further chapters
 \include{chapters/chapter1}
 \include{chapters/chapter2}
-\include{chapters/tmp}
-%\include{chapter4}
+\include{chapters/chapter3}
+\include{chapters/chapter4}
+\include{chapters/chapter5}
+\include{chapters/chapter6}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % End of Thesis text 
