--- a/bib/references.bib
+++ b/bib/references.bib
@@ -246,8 +246,7 @@
 	publisher = {arXiv},
 	author = {Anil, Rohan and Dai, Andrew M. and Firat, Orhan and Johnson, Melvin and Lepikhin, Dmitry and Passos, Alexandre and Shakeri, Siamak and Taropa, Emanuel and Bailey, Paige and Chen, Zhifeng and Chu, Eric and Clark, Jonathan H. and Shafey, Laurent El and Huang, Yanping and Meier-Hellstern, Kathy and Mishra, Gaurav and Moreira, Erica and Omernick, Mark and Robinson, Kevin and Ruder, Sebastian and Tay, Yi and Xiao, Kefan and Xu, Yuanzhong and Zhang, Yujing and Abrego, Gustavo Hernandez and Ahn, Junwhan and Austin, Jacob and Barham, Paul and Botha, Jan and Bradbury, James and Brahma, Siddhartha and Brooks, Kevin and Catasta, Michele and Cheng, Yong and Cherry, Colin and Choquette-Choo, Christopher A. and Chowdhery, Aakanksha and Crepy, Clément and Dave, Shachi and Dehghani, Mostafa and Dev, Sunipa and Devlin, Jacob and Díaz, Mark and Du, Nan and Dyer, Ethan and Feinberg, Vlad and Feng, Fangxiaoyu and Fienber, Vlad and Freitag, Markus and Garcia, Xavier and Gehrmann, Sebastian and Gonzalez, Lucas and Gur-Ari, Guy and Hand, Steven and Hashemi, Hadi and Hou, Le and Howland, Joshua and Hu, Andrea and Hui, Jeffrey and Hurwitz, Jeremy and Isard, Michael and Ittycheriah, Abe and Jagielski, Matthew and Jia, Wenhao and Kenealy, Kathleen and Krikun, Maxim and Kudugunta, Sneha and Lan, Chang and Lee, Katherine and Lee, Benjamin and Li, Eric and Li, Music and Li, Wei and Li, YaGuang and Li, Jian and Lim, Hyeontaek and Lin, Hanzhao and Liu, Zhongtao and Liu, Frederick and Maggioni, Marcello and Mahendru, Aroma and Maynez, Joshua and Misra, Vedant and Moussalem, Maysam and Nado, Zachary and Nham, John and Ni, Eric and Nystrom, Andrew and Parrish, Alicia and Pellat, Marie and Polacek, Martin and Polozov, Alex and Pope, Reiner and Qiao, Siyuan and Reif, Emily and Richter, Bryan and Riley, Parker and Ros, Alex Castro and Roy, Aurko and Saeta, Brennan and Samuel, Rajkumar and Shelby, Renee and Slone, Ambrose and Smilkov, Daniel and So, David R. and Sohn, Daniel and Tokumine, Simon and Valter, Dasha and Vasudevan, Vijay and Vodrahalli, Kiran and Wang, Xuezhi and Wang, Pidong and Wang, Zirui and Wang, Tao and Wieting, John and Wu, Yuhuai and Xu, Kelvin and Xu, Yunhan and Xue, Linting and Yin, Pengcheng and Yu, Jiahui and Zhang, Qiao and Zheng, Steven and Zheng, Ce and Zhou, Weikang and Zhou, Denny and Petrov, Slav and Wu, Yonghui},
 	month = sep,
-	year = {2023},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
+	year = {2023}
 }
 
 @misc{almazrouei_falcon_2023,
@@ -258,7 +257,6 @@
 	author = {Almazrouei, Ebtesam and Alobeidli, Hamza and Alshamsi, Abdulaziz and Cappelli, Alessandro and Cojocaru, Ruxandra and Debbah, Mérouane and Goffinet, Étienne and Hesslow, Daniel and Launay, Julien and Malartic, Quentin and Mazzotta, Daniele and Noune, Badreddine and Pannier, Baptiste and Penedo, Guilherme},
 	month = nov,
 	year = {2023},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language},
 }
 
 
@@ -502,4 +500,76 @@
   booktitle={2024 IEEE 22nd Mediterranean Electrotechnical Conference (MELECON)},
   year={2024},
   organization={IEEE}
+}
+
+@article{almeida2024montra2,
+  title="{MONTRA2: A web platform for profiling distributed databases in the health domain}",
+  author={Almeida, Jo{\~a}o Rafael and Oliveira, Jos{\'e} Lu{\'\i}s},
+  journal={Informatics in Medicine Unlocked},
+  volume={45},
+  pages={101447},
+  year={2024},
+  publisher={Elsevier},
+  doi={10.1016/j.imu.2024.101447}
+}
+
+@article{almeida2024federated,
+  title="{A Federated Authentication Schema among Multiple Identity Providers}",
+  author={Almeida, Jo{\~a}o Rafael and Z{\'u}quete, Andr{\'e} and Pazos, Alejandro and Oliveira, Jos{\'e} Lu{\'\i}s},
+  journal={Heliyon},
+  year={2024},
+  publisher={Elsevier},
+  doi={10.1016/j.heliyon.2024.e28560}
+}
+
+
+
+
+
+@misc{formal_splade_2021,
+	title = {{SPLADE}: {Sparse} {Lexical} and {Expansion} {Model} for {First} {Stage} {Ranking}},
+	shorttitle = {{SPLADE}},
+	doi = {10.48550/arXiv.2107.05720},
+	publisher = {arXiv},
+	author = {Formal, Thibault and Piwowarski, Benjamin and Clinchant, Stéphane},
+	month = jul,
+	year = {2021},
+}
+
+@misc{formal_distillation_2022,
+	title = {From {Distillation} to {Hard} {Negative} {Sampling}: {Making} {Sparse} {Neural} {IR} {Models} {More} {Effective}},
+	shorttitle = {From {Distillation} to {Hard} {Negative} {Sampling}},
+	doi = {10.48550/arXiv.2205.04733},
+	publisher = {arXiv},
+	author = {Formal, Thibault and Lassance, Carlos and Piwowarski, Benjamin and Clinchant, Stéphane},
+	month = may,
+	year = {2022},
+}
+
+@misc{chen_bge_2024,
+	title = {{BGE} {M3}-{Embedding}: {Multi}-{Lingual}, {Multi}-{Functionality}, {Multi}-{Granularity} {Text} {Embeddings} {Through} {Self}-{Knowledge} {Distillation}},
+	shorttitle = {{BGE} {M3}-{Embedding}},
+	doi = {10.48550/arXiv.2402.03216},
+	publisher = {arXiv},
+	author = {Chen, Jianlv and Xiao, Shitao and Zhang, Peitian and Luo, Kun and Lian, Defu and Liu, Zheng},
+	month = feb,
+	year = {2024},
+}
+
+
+@misc{Nous-Hermes-2-Mixtral-8x7B-DPO,
+      url={https://huggingface.co/NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO},
+      title={{Nous Hermes 2 Mixtral 8x7B DPO}},
+      author={Teknium and theemozilla and karan4d and huemin\_art}
+}
+
+@article{jiang2024a,
+  title = {Mixtral of experts},
+  author = {Jiang, Albert Q. and others},
+  year = {2024},
+  month = jan,
+  journal = {arXiv:2401.04088},
+  eprint = {2401.04088},
+  url = {https://arxiv.org/abs/2401.04088},
+  archiveprefix = {arxiv}
 }
