changes in chapter 1

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -573,3 +573,145 @@
   url = {https://arxiv.org/abs/2401.04088},
   archiveprefix = {arxiv}
 }
+
+
+@article{rogers2021clinical,
+  title={Clinical comparison between trial participants and potentially eligible patients using electronic health record data: a generalizability assessment method},
+  author={Rogers, James R and Hripcsak, George and Cheung, Ying Kuen and Weng, Chunhua},
+  journal={Journal of biomedical informatics},
+  volume={119},
+  pages={103822},
+  year={2021},
+  publisher={Elsevier},
+  doi={10.1016/j.jbi.2021.103822}
+}
+
+@article{topaloglu2018using,
+  title="{Using a federated network of real-world data to optimize clinical trials operations}",
+  author={Topaloglu, Umit and Topaloglu, Matvey B},
+  journal={JCO clinical cancer informatics},
+  volume={2},
+  pages={1--10},
+  year={2018},
+  publisher={American Society of Clinical Oncology},
+  doi={10.1200/CCI.17.00067}
+}
+
+@article{lombardo2023electronic,
+  title="{Electronic health records (EHRs) in clinical research and platform trials: Application of the innovative EHR-based methods developed by EU-PEARL}",
+  author={Lombardo, Giulia and Couvert, Camille and Kose, Melisa and Begum, Amina and Spiertz, Cecile and Worrell, Courtney and Hasselbaink, Danny and Didden, Eva-Maria and Sforzini, Luca and Todorovic, Marija and others},
+  journal={Journal of Biomedical Informatics},
+  pages={104553},
+  year={2023},
+  publisher={Elsevier},
+  doi={10.1016/j.jbi.2023.104553}
+}
+
+@article{almeida2021methodology,
+  title = "{A methodology for cohort harmonisation in multicentre clinical research}",
+  journal={Informatics in Medicine Unlocked},
+  pages={100760},
+  volume={Volume 27},
+  year={2021},
+  publisher={Elsevier},
+  doi = {10.1016/j.imu.2021.100760},
+  author = {João Rafael Almeida and Luís Bastão Silva and Isabelle Bos and Pieter Jelle Visser and José Luís Oliveira}
+}
+
+@article{kaelber2008research,
+  title="{A research agenda for Personal Health Records (PHRs)}",
+  author={Kaelber, David C and Jha, Ashish K and Johnston, Douglas and Middleton, Blackford and Bates, David W},
+  journal={Journal of the American Medical Informatics Association},
+  volume={15},
+  number={6},
+  pages={729--736},
+  year={2008},
+  publisher={BMJ Group BMA House},
+  doi={10.1197/jamia.M2547}
+}
+
+@article{pereira2023querying,
+  title={Querying semantic catalogues of biomedical databases},
+  author={Pereira, Arnaldo and Almeida, Jo{\~a}o Rafael and Lopes, Rui Pedro and Oliveira, Jos{\'e} Lu{\'\i}s},
+  journal={Journal of Biomedical Informatics},
+  volume={137},
+  pages={104272},
+  year={2023},
+  publisher={Elsevier},
+  doi={10.1016/j.jbi.2022.104272}
+}
+
+@inproceedings{almeida2022secure,
+  title="{A secure architecture for exploring patient-level databases from distributed institutions}",
+  author={Almeida, Jo{\~a}o Rafael and Barraca, Joao Paulo and Oliveira, Jos{\'e} Lu{\'\i}s},
+  booktitle={2022 IEEE 35th International Symposium on Computer-Based Medical Systems (CBMS)},
+  pages={447--452},
+  year={2022},
+  organization={IEEE},
+  doi={10.1109/CBMS55023.2022.00086}
+}
+
+@article{hripcsak2016characterizing,
+  title="{Characterizing treatment pathways at scale using the OHDSI network}",
+  author={George Hripcsak and Patrick B. Ryan and Jon D. Duke and Nigam H. Shah and Rae Woong Park and Vojtech Huser and Marc A. Suchard and Martijn J. Schuemie and Frank J. DeFalco and Adler Perotte and Juan M. Banda and Christian G. Reich and Lisa M. Schilling and Michael E. Matheny and Daniella Meeker and Nicole Pratt and David Madigan},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={27},
+  pages={7329--7336},
+  year={2016},
+  publisher={National Acad Sciences},
+  doi={10.1073/pnas.1510502113}
+}
+
+@article{park2023exploring,
+  title={Exploring the potential of OMOP common data model for process mining in healthcare},
+  author={Park, Kangah and Cho, Minsu and Song, Minseok and Yoo, Sooyoung and Baek, Hyunyoung and Kim, Seok and Kim, Kidong},
+  journal={Plos one},
+  volume={18},
+  number={1},
+  pages={e0279641},
+  year={2023},
+  publisher={Public Library of Science San Francisco, CA USA},
+  doi={10.1371/journal.pone.0279641}
+}
+
+@article{almeida2021two,
+  title="{A two-stage workflow to extract and harmonize drug mentions from clinical notes into observational databases}",
+  author={Almeida, Jo{\~a}o Rafael and Silva, Jo{\~a}o Figueira and Matos, S{\'e}rgio and Oliveira, Jos{\'e} Lu{\'\i}s},
+  journal={Journal of Biomedical Informatics},
+  volume={120},
+  pages={103849},
+  year={2021},
+  publisher={Elsevier},
+  doi={10.1016/j.jbi.2021.103849}
+}
+
+@article{reich2024ohdsi,
+  title="{OHDSI Standardized Vocabularies—a large-scale centralized reference ontology for international data harmonization}",
+  author={Reich, Christian and Ostropolets, Anna and Ryan, Patrick and Rijnbeek, Peter and Schuemie, Martijn and Davydov, Alexander and Dymshyts, Dmitry and Hripcsak, George},
+  journal={Journal of the American Medical Informatics Association},
+  pages={ocad247},
+  year={2024},
+  publisher={Oxford University Press},
+  doi={10.1093/jamia/ocad247}
+}
+
+@inproceedings{almeida2023clinical,
+  title="{Clinical Data Integration Strategies for Multicenter Studies}",
+  author={Almeida, Jo{\~a}o Rafael and Pazos, Alejandro and Oliveira, Jos{\'e} Lu{\'\i}s},
+  booktitle={Doctoral Conference on Computing, Electrical and Industrial Systems},
+  pages={175--190},
+  year={2023},
+  organization={Springer},
+  doi={10.1007/978-3-031-36007-7_13}
+}
+
+@inproceedings{almeida2023fair,
+  title="{A FAIR approach to real-world health data management and analysis}",
+  author={Almeida, Jo{\~a}o Rafael and Silva, Jorge Miguel and Oliveira, Jos{\'e} Lu{\'\i}s},
+  booktitle={2023 IEEE 36th International Symposium on Computer-Based Medical Systems (CBMS)},
+  pages={892--897},
+  year={2023},
+  organization={IEEE},
+  doi={10.1109/CBMS58004.2023.00338}
+}
