--- a/bib/references.bib
+++ b/bib/references.bib
@@ -715,3 +715,14 @@
   organization={IEEE},
   doi={10.1109/CBMS58004.2023.00338}
 }
+
+
+@inproceedings{ritzel2019development,
+  title={Development and usability evaluation of a prototype conversational interface for biological information retrieval via bioinformatics},
+  author={Ritzel Paix{\~a}o-C{\^o}rtes, Walter and Stangherlin Machado Paix{\~a}o-C{\^o}rtes, Vanessa and Ellwanger, Cristiane and Norberto de Souza, Osmar},
+  booktitle={Human Interface and the Management of Information. Visual Information and Knowledge Management: Thematic Area, HIMI 2019, Held as Part of the 21st HCI International Conference, HCII 2019, Orlando, FL, USA, July 26--31, 2019, Proceedings, Part I 21},
+  pages={575--593},
+  year={2019},
+  organization={Springer},
+  doi={10.1007/978-3-030-22660-2_43}
+}
