--- a/cover.tex
+++ b/cover.tex
@@ -111,8 +111,8 @@
 
 %%% OPTIONAL: add a quotation if you like.
 %% Optional Quotation
-\Quote{\selectlanguage{english}The greatest challenge to any thinker is stating
-the problem in a way that will allow a solution}{Bertrand Russell}
+%% \Quote{\selectlanguage{english}The greatest challenge to any thinker is stating
+%% the problem in a way that will allow a solution}{Bertrand Russell}
 
 %%% Edit your supervisor's information.
 %%%
@@ -181,7 +181,12 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 
 %%% OPTIONAL: Add an acknowledgement text
 %% Optional Acknowledgement text
-\Acknowledgements{Agradeço toda a ajuda a todos os meus orientadores, amigos e família.}
+\Acknowledgements{Em primeiro lugar, expresso minha profunda gratidão aos meus orientadores, especialmente ao Professor Auxiliar João Rafael Almeida. O seu apoio foi além da orientação do projeto; ele guiou-me e desafiou-me ao longo de todo este processo, instigando-me a superar e enfrentar novos desafios. Agradeço também ao meu colaborador, Tiago Almeida, que sempre esteve disponível para me aconselhar e guiar no melhor caminho.
+
+A todos os meus amigos, estou imensamente grato pelo constante companheirismo e pela partilha da vida académica ao longo dos últimos anos. À Inês, um agradecimento especial pela paciência e pelo suporte emocional incondicional.
+
+Por fim, dedico este trabalho à minha família, a grande base da minha pessoa, que sempre me apoiou e tornou possível a minha jornada até aqui.
+}
 
 %% commented
 
@@ -212,10 +217,6 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%%  members of the jury as many times as necessary.
 %% Additional members of the Jury
 \JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
-\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
-\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
-\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
-\JuriMember{Prof. Doutor João Antunes da Silva}{professor associado da Faculdade de Engenharia da Universidade do Porto}
 
 
 
@@ -232,7 +233,7 @@ the problem in a way that will allow a solution}{Bertrand Russell}
 %%%  declaration). If you're writing your thesis
 %%%  in english uncomment the following line.
 %%% Set the proper language or you will end with incorrect hyphenation!
-%\selectlanguage{english}
+\selectlanguage{english}
 
 
 \MakeCover
